--- a/app/views/guides/new.html.erb
+++ b/app/views/guides/new.html.erb
@@ -1,5 +1,9 @@
-<h1 class="text-center">New guide</h1>
 
-<%= render 'form' %>
+<div class="container">
+	<h1 class="text-center">New guide</h1>
 
-<%= link_to 'Back', guides_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Back', guides_path %>
+</div>
+
