--- a/app/assets/stylesheets/guides.css.scss
+++ b/app/assets/stylesheets/guides.css.scss
@@ -4,6 +4,67 @@
 
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
 
+html, body
+{
+    height: 100%;
+}
+
+.navbar {
+	margin-bottom: 39px;
+}
+
+#difficulty-container {
+	width: 100%;
+}
+
+
+
+.hackinfo {
+	width: 100%;
+	background-color: #f4f5f7;
+	height: 200px;
+}
+
+.landing-header-section {
+	max-height: none;
+}
+
+.landing-header-section {
+	width: 100%;
+	height: 520px;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.landing-header-text {
+	float: left;
+	width: 100%;
+}
+
+.landing-header-text {
+	position: relative;
+	min-height: 1px;
+	padding-left: 15px;
+	padding-right: 15px;
+	text-align: center;
+}
+
+.landing-header-text>h1 {
+	font-size: 3em;
+	line-height: 1.1;
+	color: white;
+	margin-top: 1em;
+	text-transform: uppercase;
+}
+
+
+
+h1.lead {
+	color: #000;
+}
+
 div.box-icon > span {
 	background-color: #ecf1f1;  
 }
@@ -134,17 +195,25 @@ div.box {
 	max-width: 750px;
 }
 
+.panel:hover {
+	border-color: #9b59b6;
+	border-width: 1px;
+}
+
 .card {
-	height: 120px;
-	width: 350px;
+	height: 210px;
+	width: 390px;
 	float: left;
-	margin-bottom: 72px;
-	margin-left: 40px;
+	margin-bottom: 25px;
+	margin-left: 30;
+	padding: 19px;
 }
 
 .card_left {
-	width: 90px;
+	width: 84px;
 	float: left;
+	margin-left: 0px;
+	margin-top: 21px;
 }
 
 .card_photo {
@@ -176,7 +245,7 @@ div.box {
 }
 
 .card_right {
-	width: 273px;
+	width: 261px;
 	float: left;
 }
 
@@ -271,4 +340,145 @@ div.box {
 
 #cta {
 	padding: 15px;
+}
+
+.sidebar-module-inset {
+	padding: 15px;
+	background-color: #2c3e50;
+	border-radius: 4px;
+	color: #ecf0f1;
+}
+
+.sidebar-module {
+	padding: 15px;
+	margin: 0 -15px 15px;
+}
+
+.bs-docs-header {
+	padding-top: 90px;
+	padding-bottom: 90px;
+	font-size: 24px;
+	text-align: left;
+	font-size: 20px;
+	margin-top: -40px;
+	z-index: 0;
+}
+
+.bs-docs-header, .bs-docs-masthead {
+	position: relative;
+	color: #cdbfe3;
+	text-align: center;
+	text-shadow: 0 1px 0 rgba(0,0,0,.1);
+	background-color: #9b59b6;
+	background-image: -webkit-gradient(linear,left top,left bottom,from(#9b59b6),to(#34495e));
+	background-image: -webkit-linear-gradient(top,#9b59b6 0,#34495e 100%);
+	background-image: -o-linear-gradient(top,#9b59b6 0,#34495e 100%);
+	background-image: linear-gradient(to bottom,#9b59b6 0,#34495e 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9b59b6', endColorstr='#6F5499', GradientType=0);
+	background-repeat: repeat-x;
+}
+
+.bs-docs-header .container {
+	position: relative;
+}
+
+.container {
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.bs-docs-header h1 {
+font-size: 60px;
+line-height: 1;
+}
+
+.bs-docs-header h1 {
+margin-top: 0;
+color: #fff;
+}
+
+.bs-docs-header p {
+margin-bottom: 0;
+font-weight: 300;
+line-height: 1.4;
+}
+
+p {
+margin: 0 0 10px;
+}
+
+p.label.label-default.label-empty {
+	background-color: none!important;
+}
+
+#guide-show-links {
+	margin-left: 5px;
+	margin-top: 5px;
+}
+
+#ingredients-title {
+	background-color: #e7e7e7;
+	padding: 10px;
+	padding-right: 50px;
+}
+
+
+#ingredients-title, #ingredients-content {
+	min-height: 50%;
+}
+
+#ingredients-content {
+	margin-bottom: 20px;
+}
+
+#difficulty {
+	background-color: #e7e7e7;
+	padding: 10px;
+	padding-right: 50px;
+}
+
+#difficulty-title, #difficulty-content {
+	min-height: 50%;
+}
+
+#difficulty-content {
+	margin-top: 5px;
+	margin-bottom: 20px;
+}
+
+#cta {
+	margin-bottom: -15px;
+	margin-top: 10px;
+}
+
+#video {
+	background-color: #e7e7e7;
+	padding: 10px;
+	padding-right: 50px;
+}
+
+#video-title, #video-content {
+	min-height: 50%;
+}
+
+#video-content {
+	margin-top: 5px;
+	margin-bottom: 20px;
+}
+
+#author {
+	background-color: #e7e7e7;
+	padding: 10px;
+	padding-right: 50px;
+}
+
+#author-title, #author-content {
+	min-height: 50%;
+}
+
+#author-content {
+	margin-top: 5px;
+	margin-bottom: 20px;
 }
