--- a/app/views/guides/edit.html.erb
+++ b/app/views/guides/edit.html.erb
@@ -1,6 +1,10 @@
-<h1 class="text-center">Editing guide</h1>
+<div class="container">
+	<h1 class="text-center">Editing guide</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @guide %> |
-<%= link_to 'Back', guides_path %>
+	<%= link_to 'Show', @guide %> |
+	<%= link_to 'Back', guides_path %>
+</div>
+
+
