--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -1,52 +1,112 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="box">
-                <div class="box-icon">
-                    <span class="fa fa-4x"><%= image_tag "eyal.jpeg", class: "img-responsive img-circle2"  %></span>
-                </div>
-                <div class="info">
-                    <h4 class="text-center"><%= @guide.name %></h4>
-                    <h5 class="text-center">Authored by <%= @guide.author %></h5>
-                    <h5 class="text-center"><%= link_to "8 Reviews", "#", id: "reviews" %></h5>
-                    
-                      <p class="lead">Description</p>
-                     <p><%= @guide.longdescription %></p>
-                    
-                    
-                    
-                    <br><br>
-                    <div class="row" align="center">
-                      <div class="gig_submenu">
-                        <a onclick="show_message();" class="service_button2"><%= image_tag 'icon_message.png' %> Send Message</a>
-                        <a onclick="add_favorite();" class="service_button2" id="favorite"><%= image_tag 'icon_favorite.png' %> Add to Favorites</a>
-                        <a href="../gigs?seller=12955" class="service_button2"><%= image_tag 'icon_other.png' %> Geeks Other Gigs</a>
-                        <a href="https://www.linkedin.com/profile/view?id=144713849&amp;authType=name&amp;authToken=jswz&amp;trk=api*a3524843*s3596503*" target="_blank" class="service_button2"><%= image_tag 'icon_linkedin.png' %> LinkedIn Profile</a>
-                      </div>
 
-                      <div class="col-md-4"></div>
-                      <div class="col-md-4">
-                        <% if @guide.availability == true %>
-                          <a id="cta" href="#" class="btn btn-success btn-block">Get Guide for 
-                            <% if @guide.price > 1 %>
-                              $<%= @guide.price / 100 %>
-                            <% else %>
-                              FREE
-                            <% end %>
-                          </a>
-                        <% else %>
-                         <a id="cta" class="btn btn-danger btn-block" disabled="disabled">Guide Unavailable</a>
-                        <% end %>
-                                            
-                        <br>
-                      </div>
-                  </div>
 
-            </div>
+<div class="bs-docs-header" id="content">
+      <div class="container text-center">
+        <h1><%= @guide.name %></h1>
+        <p><%= @guide.description %></p>
+        
+        <br>
+
+        <p class="label label-default label-empty"><strong>difficulty:</strong> beginner</p> 
+        <p class="label label-default"><strong>time:</strong> 4-6 hours</p>
+
+        <br>
+
+        <div class="row" id="cta">
+          <div class="col-md-offset-4 col-md-4">
+            <% if @guide.availability == true %>
+              <a id="cta" href="#" class="btn btn-success btn-block">Get Guide for 
+                <% if @guide.price > 1 %>
+                  $<%= @guide.price / 100 %>
+                <% else %>
+                  FREE
+                <% end %>
+              </a>
+            <% else %>
+             <a id="cta" class="btn btn-danger btn-block" disabled="disabled">Guide Unavailable</a>
+            <% end %>
+                                
+            <br>
+            <%= render 'showlinks' %>
+          </div>
         </div>
-  </div>
+
+        <div id="carbonads-container">
+          <div class="carbonad">
+            <div id="azcarbon">
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
+
+<div>
+    <section class="row">
+      <div id="author" class="col-md-3">
+        <h2 class="pull-right">Author</h2>
+      </div>
+      <div id="author-content" class="col-md-6">
+        <h4 class="tag"><mute><%= link_to "Eyal Toledano", "#" %></h4>
+        <p>This guide assumes you have a working knowledge of Twitter, Mailchimp, HTML, CSS and Ruby on Rails.</p>
+      </section>
+</div>
+
+<div>
+    <section class="row">
+      <div id="difficulty" class="col-md-3">
+        <h2 class="pull-right">Difficulty</h2>
+      </div>
+      <div id="difficulty-content" class="col-md-6">
+        <h4 class="tag">BEGINNER</h4>
+        <p>This guide assumes you have a working knowledge of Twitter, Mailchimp, HTML, CSS and Ruby on Rails.</p>
+      </section>
+</div>
+
+<div>
+    <section id="ingredients" class="row">
+      <div id="ingredients-title" class="col-md-3">
+        <h2 class="pull-right">Ingredients</h2>
+      </div>
+      <div id="ingredients-content" class="col-md-6">
+        <div id="ingredients-content-list" class="list-group">
+          <a href="#" class="list-group-item ">
+            <h4 class="list-group-item-heading">Unbounce</h4>
+            <p class="list-group-item-text">You'll build your list by sending visitors to a dedicated pre-launch page.</p>
+          </a>
+          <a href="#" class="list-group-item ">
+            <h4 class="list-group-item-heading">Twitter</h4>
+            <p class="list-group-item-text">You will leverage the networking effects of Twitter to find the right early adopters</p>
+          </a>
+          <a href="#" class="list-group-item ">
+            <h4 class="list-group-item-heading">Mailchimp</h4>
+            <p class="list-group-item-text">You will capture the email information of interested users ahead of a product launch announcement</p>
+          </a>
+          <a href="#" class="list-group-item ">
+            <h4 class="list-group-item-heading">BetaList</h4>
+            <p class="list-group-item-text">Your product launch will echo forward as early adopters talk about your product amongst each other.</p>
+          </a>
+        </div>
+      </section>
+</div>
+
+<div>
+    <section class="row">
+      <div id="video" class="col-md-3">
+        <h2 class="pull-right">Video Resource</h2>
+      </div>
+      <div id="video-content" class="col-md-6">
+        <h4 class="tag">VIDEO</h4>
+        <p><%= link_to "Upload a video for this growth hack." %></p>
+      </section>
+</div>
+
+
+
+
 
 <br>
 
-<%= link_to 'Edit', edit_guide_path(@guide) %> | <%= link_to 'Delete', @guide, method: :delete, data: { confirm: 'Are you sure?' } %> | <%= link_to 'Back', guides_path %>
+
+
+
+
