--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           
           <ul class="nav navbar-nav">
-        <li class="dropdown mega-dropdown active">
+        <li class="dropdown mega-dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse Hacks <span class="caret"></span></a>       
         <div class="dropdown-menu mega-dropdown-menu">
                     <div class="container-fluid">
