--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,41 +1,43 @@
-<div class="row">
-	<h1 class="text-center">Dashboard</h1>
-	<br>
+<div class="container">
+	<div class="row">
+		<h1 class="text-center">Dashboard</h1>
+		<br>
 
-	<div class="col-md-4">
-		<h3 class="text-center">
-			My Growth Hacks <%= link_to "New Hack", new_guide_path, class: "btn btn-primary btn-small" %>
-		</h3>
+		<div class="col-md-4">
+			<h3 class="text-center">
+				My Growth Hacks <%= link_to "New Hack", new_guide_path, class: "btn btn-primary btn-small" %>
+			</h3>
 
-		<table class="table">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Available</th>  
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-        <% @guide.each do |guide| %> 
-          <tr>
-            <td><%= guide.id %></td>
-            <td><%= link_to guide.name, guide_path(guide) %></td>
-            <td><%= guide.availability %></td>
-            <td><%= link_to "Edit", edit_guide_path(guide) %></td>
-		 </tr>
-        <% end %>
-	    </tbody>
-	    </table>
+			<table class="table">
+	        <thead>
+	          <tr>
+	            <th>ID</th>
+	            <th>Name</th>
+	            <th>Available</th>  
+	            <th></th>
+	          </tr>
+	        </thead>
+	        <tbody>
+	        <% @guide.each do |guide| %> 
+	          <tr>
+	            <td><%= guide.id %></td>
+	            <td><%= link_to guide.name, guide_path(guide) %></td>
+	            <td><%= guide.availability %></td>
+	            <td><%= link_to "Edit", edit_guide_path(guide), class: "label label-default" %></td>
+			 </tr>
+	        <% end %>
+		    </tbody>
+		    </table>
 
 
-	</div>
+		</div>
 
-	<div class="col-md-4">
-		<h3 class="text-center">Growth Hacks Purchased</h3>
-	</div>
+		<div class="col-md-4">
+			<h3 class="text-center">Growth Hacks Purchased</h3>
+		</div>
 
-	<div class="col-md-4">
-		<h3 class="text-center">Growth Hacks Sold</h3>
+		<div class="col-md-4">
+			<h3 class="text-center">Growth Hacks Sold</h3>
+		</div>
 	</div>
 </div>
