--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,46 +1,49 @@
-<% if current_user %>
+<div class="container">
+  <% if current_user %>
 
-<div class="page-header text-center">
-  <h1><small>Logged in as <%= current_user.email %> <%= link_to "Not you?", destroy_user_session_path, method: :delete %> </small></h1>
-</div>
+  <div class="page-header text-center">
+    <h1><small>Logged in as <%= current_user.email %> <%= link_to "Not you?", destroy_user_session_path, method: :delete %> </small></h1>
+  </div>
 
-<% else %>
+  <% else %>
 
-<body id="home-body">
-    <div class="">
-          <div class="row">
-           
-            <div class="col-lg-12 text-center v-center">
-              
-              <div class="text-center">
-    		<div id="home-header">
-          <div id="engine-graphic" align="middle">
-                <%= render 'engine' %>
-              </div>
-          <h1 id="main-header">Learn the Science of Growth Hacking</h1>
-      		<p class="lead home-lead">Start building your startup's Growth engine today.</p>
-        </div>
-      		<%= link_to "Browse Guides", guides_path, class: "btn btn-default btn-lg" %> 
-          <%= link_to 'Sell Guides', new_guide_path, class: "btn btn-primary btn-lg" %> 
-        </div>
-     
-     <br><br>
-     
-         <div class="row page-header" align="middle">
-          <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is a marketplace for buying and selling your Growth Hacking knowledge.</h3>
+  <body id="home-body">
+      <div class="">
+            <div class="row">
+             
+              <div class="col-lg-12 text-center v-center">
+                
+                <div class="text-center">
+          <div id="home-header">
+            <div id="engine-graphic" align="middle">
+                  <%= render 'engine' %>
+                </div>
+            <h1 id="main-header">Learn the Science of Growth Hacking</h1>
+            <p class="lead home-lead">Start building your startup's Growth engine today.</p>
+          </div>
+            <%= link_to "Browse Guides", guides_path, class: "btn btn-default btn-lg" %> 
+            <%= link_to 'Sell Guides', new_guide_path, class: "btn btn-primary btn-lg" %> 
+          </div>
+       
+       <br><br>
+       
+           <div class="row page-header" align="middle">
+            <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is a marketplace for buying and selling your Growth Hacking knowledge.</h3>
+            <br>
+          </div>
+
           <br>
-        </div>
+              </div>
+            </div> <!-- /row -->      
+      </div> <!-- /container full -->
 
         <br>
-            </div>
-          </div> <!-- /row -->      
-    </div> <!-- /container full -->
 
-      <br>
+  </div>
 
+  <% end %>
 </div>
 
-<% end %>
 
 
 
