--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -40,71 +40,7 @@
       </div>
 </div>
 
-<div>
-    <section class="row">
-      <div id="author" class="col-md-3">
-        <h2 class="pull-right">Author</h2>
-      </div>
-      <div id="author-content" class="col-md-6">
-        <h4 class="tag"><mute><%= link_to "Eyal Toledano", "#" %></h4>
-        <p>This guide assumes you have a working knowledge of Twitter, Mailchimp, HTML, CSS and Ruby on Rails.</p>
-      </section>
-</div>
-
-<div>
-    <section class="row">
-      <div id="difficulty" class="col-md-3">
-        <h2 class="pull-right">Difficulty</h2>
-      </div>
-      <div id="difficulty-content" class="col-md-6">
-        <h4 class="tag">BEGINNER</h4>
-        <p>This guide assumes you have a working knowledge of Twitter, Mailchimp, HTML, CSS and Ruby on Rails.</p>
-      </section>
-</div>
-
-<div>
-    <section id="ingredients" class="row">
-      <div id="ingredients-title" class="col-md-3">
-        <h2 class="pull-right">Ingredients</h2>
-      </div>
-      <div id="ingredients-content" class="col-md-6">
-        <div id="ingredients-content-list" class="list-group">
-          <a href="#" class="list-group-item ">
-            <h4 class="list-group-item-heading">Unbounce</h4>
-            <p class="list-group-item-text">You'll build your list by sending visitors to a dedicated pre-launch page.</p>
-          </a>
-          <a href="#" class="list-group-item ">
-            <h4 class="list-group-item-heading">Twitter</h4>
-            <p class="list-group-item-text">You will leverage the networking effects of Twitter to find the right early adopters</p>
-          </a>
-          <a href="#" class="list-group-item ">
-            <h4 class="list-group-item-heading">Mailchimp</h4>
-            <p class="list-group-item-text">You will capture the email information of interested users ahead of a product launch announcement</p>
-          </a>
-          <a href="#" class="list-group-item ">
-            <h4 class="list-group-item-heading">BetaList</h4>
-            <p class="list-group-item-text">Your product launch will echo forward as early adopters talk about your product amongst each other.</p>
-          </a>
-        </div>
-      </section>
-</div>
-
-<div>
-    <section class="row">
-      <div id="video" class="col-md-3">
-        <h2 class="pull-right">Video Resource</h2>
-      </div>
-      <div id="video-content" class="col-md-6">
-        <h4 class="tag">VIDEO</h4>
-        <p><%= link_to "Upload a video for this growth hack." %></p>
-      </section>
-</div>
-
-
-
-
-
-<br>
+<%= render 'guidelanding' %>
 
 
 
