--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,7 +11,7 @@ html,body#home-body  {
 }
 
 body#home-body  {
-  background: #2a88c5 url("http://zmwlt.com/bucket/cz-20150128-what-color-2-bg.jpg") center center / 70%;
+  background: #9b59b6 url("bg.jpg") center center / 70%;
   position: relative;
 }
 
