--- a/app/views/guides/_showlinks.html.erb
+++ b/app/views/guides/_showlinks.html.erb
@@ -1,10 +1,12 @@
 <div id="guide-show-links">
-	<%= link_to 'Edit', edit_guide_path(@guide), class: "label label-default" %> | <%= link_to 'Delete', @guide, method: :delete, data: {
+	<%= link_to '< Back', guides_path, class: "label label-default" %> 
+	<%= link_to 'Edit', edit_guide_path(@guide), class: "label label-default" %> 
+	<%= link_to 'Delete', @guide, method: :delete, data: {
 	   title: 'Danger Zone', 
 	   text: 'Are you certain you want to delete this guide?',
 	   confirm: 'Are you sure?',
 	   :'confirm-button-text' => 'DO IT, DELETE',
 	   :'cancel-button-text' => 'Cancel',
 	   :'confirm-button-color' => '#f84545',
-	}, class: "label label-danger" %> | <%= link_to 'Back', guides_path, class: "label label-default" %>
+	}, class: "label label-default" %> 
 </div>
