--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -2,6 +2,8 @@
 
 <div class="bs-docs-header" id="content">
       <div class="container text-center">
+        <%= render 'showlinks' %> <br>
+
         <h1><%= @guide.name %></h1>
         <p><%= @guide.description %></p>
         
@@ -9,34 +11,15 @@
 
         <p class="label label-default label-empty"><strong>difficulty:</strong> beginner</p> 
         <p class="label label-default"><strong>time:</strong> 4-6 hours</p>
+      </div>
 
         <br>
-
-        <div class="row" id="cta">
-          <div class="col-md-offset-4 col-md-4">
-            <% if @guide.availability == true %>
-              <a id="cta" href="#" class="btn btn-success btn-block">Get Guide for 
-                <% if @guide.price > 1 %>
-                  $<%= @guide.price / 100 %>
-                <% else %>
-                  FREE
-                <% end %>
-              </a>
-            <% else %>
-             <a id="cta" class="btn btn-danger btn-block" disabled="disabled">Guide Unavailable</a>
-            <% end %>
-                                
-            <br>
-            <%= render 'showlinks' %>
-          </div>
+        
+      <div id="progressrow" class="row">
+        <%= render 'progressbar' %>
         </div>
-
-        <div id="carbonads-container">
-          <div class="carbonad">
-            <div id="azcarbon">
-            </div>
-          </div>
-        </div>
+        
+        <div class="col-md-2"><%= render 'guidecta' %></div>
       </div>
 </div>
 
