Added pretty URL slugs to guides

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,11 +23,11 @@
                         <div class="tab-content">
                           <div class="tab-pane active" id="men">
                             <ul class="nav-list list-inline">
-                                <li><a href="#"><%= image_tag 'acquisition.png' %><span>Acquisition</span></a></li>
-                                <li><a href="#"><%= image_tag 'activation.png' %><span>Activation</span></a></li>
-                                <li><a href="#"><%= image_tag 'retention.png' %><span>Retention</span></a></li>
-                                <li><a href="#"><%= image_tag 'referral.png' %><span>Referral</span></a></li>
-                                <li><a href="#"><%= image_tag 'revenue.png' %><span>Revenue</span></a></li>
+                                <li><a href="/categories/1"><%= image_tag 'acquisition.png' %><span>Acquisition</span></a></li>
+                                <li><a href="/categories/2"><%= image_tag 'activation.png' %><span>Activation</span></a></li>
+                                <li><a href="/categories/3"><%= image_tag 'retention.png' %><span>Retention</span></a></li>
+                                <li><a href="/categories/4"><%= image_tag 'referral.png' %><span>Referral</span></a></li>
+                                <li><a href="/categories/5"><%= image_tag 'revenue.png' %><span>Revenue</span></a></li>
                             </ul>
                           </div>
                           <div class="tab-pane" id="women">
