--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,12 +10,10 @@
   <body id="home-body">
       <div class="">
             <div class="row">
-             
               <div class="col-lg-12 text-center v-center">
-                
                 <div class="text-center">
-          <div id="home-header">
-            <div id="engine-graphic" align="middle">
+                 <div id="home-header">
+                   <div id="engine-graphic" align="middle">
                   <%= render 'engine' %>
                 </div>
             <h1 id="main-header">Learn the Science of Growth Hacking</h1>
@@ -28,11 +26,24 @@
        <br><br>
        
            <div class="row page-header" align="middle">
-            <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is a marketplace for buying and selling your Growth Hacking knowledge.</h3>
+            <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is the marketplace for buying and selling your Growth Hacking knowledge.</h3>
             <br>
           </div>
 
           <br>
+        </div>
+          <div id="suggestedbooks">
+            <h2 id="explore-hacks" class="text-center">Explore Popular Growth Hacks</h2>
+            <br>
+            <div class="row">
+              <div class="col-md-offset-1 col-md-12">
+                <%= render @guides %>
+              </div>
+            </div>
+          </div>
+          
+
+
               </div>
             </div> <!-- /row -->      
       </div> <!-- /container full -->
