Added a sales model to handle transactions, created but commented out price numericality check.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
        <br><br>
        
            <div class="row page-header" align="middle">
-            <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is the marketplace for buying and selling your Growth Hacking knowledge.</h3>
+            <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is theb marketplace for buying and selling your Growth Hacking knowledge.</h3>
             <br>
           </div>
 
