--- a/app/views/guides/_form.html.erb
+++ b/app/views/guides/_form.html.erb
@@ -17,5 +17,5 @@
             <%= f.input :availability, required: false, label: false %>
           </div>
  
-        <%= f.button :submit, "Create Growth Hack", class: "btn btn-primary btn-block" %>
+        <%= f.button :submit, "Save Growth Hack", class: "btn btn-primary btn-block" %>
     <% end %>
