--- a/app/assets/stylesheets/guides.css.scss
+++ b/app/assets/stylesheets/guides.css.scss
@@ -13,6 +13,14 @@ html, body
 	margin-bottom: 39px;
 }
 
+.alert {
+	padding: 20px;
+	margin-bottom: 41px;
+	margin-top: -38px;
+	border: 1px solid transparent;
+	border-radius: 4px;
+}
+
 #difficulty-container {
 	width: 100%;
 }
@@ -501,5 +509,18 @@ p.label.label-default.label-empty {
 }
 
 #progress-inner-text {
-	margin-top: 12px;
+	margin-top: 15px;
+	width: 80%;
+	font-size: 125%;
+	margin-left: 9%;
+}
+
+.guide-bg-image {
+	display: block;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  left: 0;
+  position: fixed;
+  right: 0;
+  z-index: 1;
 }
