--- a/app/views/guides/edit.html.erb
+++ b/app/views/guides/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1 class="text-center">Editing guide</h1>
+	<h1 class="text-center lead"><%= @guide.name %></h1>
 
 	<%= render 'form' %>
 
