--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -1,5 +1,6 @@
 
   <div class="bs-docs-header" id="content">
+        <div class="guide-bg-image"></div>
         <div class="container text-center">
           <%= render 'showlinks' %> <br>
 
