--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,7 +11,7 @@ html,body#home-body  {
 }
 
 body#home-body  {
-  background: #9b59b6 url("bg.jpg") center center / 70%;
+  background: url("bg.jpg") center center / 70%;
   position: relative;
 }
 
