--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,5 @@
 <div class="container">
-  <% if current_user %>
 
-  <div class="page-header text-center">
-    <h1><small>Logged in as <%= current_user.email %> <%= link_to "Not you?", destroy_user_session_path, method: :delete %> </small></h1>
-  </div>
-
-  <% else %>
 
   <body id="home-body">
       <div class="">
@@ -17,7 +11,7 @@
                   <%= render 'engine' %>
                 </div>
             <h1 id="main-header">Learn the Science of Growth Hacking</h1>
-            <p class="lead home-lead">Start building your startup's Growth engine today.</p>
+            <p class="lead home-lead">Buy and Sell your Growth Hacking knowledge.</p>
           </div>
             <%= link_to "Browse Guides", guides_path, class: "btn btn-default btn-lg" %> 
             <%= link_to 'Sell Guides', new_guide_path, class: "btn btn-primary btn-lg" %> 
@@ -26,14 +20,13 @@
        <br><br>
        
            <div class="row page-header" align="middle">
-            <h3 id="home-lead" class="white-text"><strong>Hacker Guides</strong> is theb marketplace for buying and selling your Growth Hacking knowledge.</h3>
+            <h3 id="home-lead" class="white-text">Explore Trending Growth Hacks</h3>
             <br>
           </div>
 
           <br>
         </div>
           <div id="suggestedbooks">
-            <h2 id="explore-hacks" class="text-center">Explore Popular Growth Hacks</h2>
             <br>
             <div class="row">
               <div class="col-md-offset-1 col-md-12">
@@ -51,10 +44,5 @@
         <br>
 
   </div>
-
-  <% end %>
 </div>
-
-
-
 
